CHANGES in VERSION 1.1.1

* `pkgndep()` allows github repo as input.
* extensively improved the website.
* add `co_heaviness()` function.

CHANGES in VERSION 1.1.0

* also include packages in Enhances.
* now dependency is calculated from the package database from `available_packages()`.
* add a online website for package dependency analysis for all packages on CRAN/Bioconductor.

====================================

CHANGES in VERSION 1.0.3

* fontsize can be adjusted globally by a factor.

=====================================

CHANGES in VERSION 1.0.1

* add the loading time for packages


======================================
CHANGES in VERSION 1.0.0

* New submission to CRAN