@@ -186,42 +186,55 @@
 <span class="co">##        1.800000</span></code></pre>
 </div>
 <div class="section level2">
+<h2 id="check-the-availability-of-packages">Check the availability of packages<a class="anchor" aria-label="anchor" href="#check-the-availability-of-packages"></a>
+</h2>
+<p>We suggest to move heavy parent packages that are less used to <code>Suggests</code> and they are only loaded when the corresponding functions are called. Dependency packages listed in <code>Suggests</code> by default are not mandatory to be installed, thus, there will be errors when the functions are called but these dependency packages are not installed yet. <strong>pkgndep</strong> provides a function <code><a href="../reference/check_pkg.html">check_pkg()</a></code> that checks the availability of a package, and if the package has not been installed yet, <code><a href="../reference/check_pkg.html">check_pkg()</a></code> prints friendly messages to guide user to install it.</p>
+<p>Assume <code>foo()</code> is a function that uses another function <code><a href="https://rdrr.io/r/grDevices/plotmath.html" class="external-link">bar()</a></code> from a heavy parent <strong>pkg</strong>, <code>foo()</code> can be written as:</p>
+<div class="sourceCode" id="cb14"><pre class="downlit sourceCode r">
+<code class="sourceCode R"><span class="va">foo</span> <span class="op">=</span> <span class="kw">function</span><span class="op">(</span><span class="va">...</span><span class="op">)</span> <span class="op">{</span>
+    <span class="fu"><a href="../reference/check_pkg.html">check_pkg</a></span><span class="op">(</span><span class="st">"pkg"</span>, <span class="va">...</span><span class="op">)</span>
+
+    <span class="fu">pkg</span><span class="fu">::</span><span class="fu">bar</span><span class="op">(</span><span class="va">...</span><span class="op">)</span>
+    <span class="va">...</span>
+<span class="op">}</span></code></pre></div>
+</div>
+<div class="section level2">
 <h2 id="a-fast-version-of-toolspackage_dependencies">A fast version of <code>tools::package_dependencies()</code><a class="anchor" aria-label="anchor" href="#a-fast-version-of-toolspackage_dependencies"></a>
 </h2>
 <p>The package dependencies are based on “package database” which is normally retrieved by <code><a href="https://rdrr.io/r/utils/available.packages.html" class="external-link">available.packages()</a></code>. In <strong>tools</strong> package, there is a <code>package_dependencies()</code> function that can be used to get a list of dependency packages. In the following example code, we retrieve the dependency packages for package <strong>cola</strong>.</p>
-<div class="sourceCode" id="cb14"><pre class="downlit sourceCode r">
+<div class="sourceCode" id="cb15"><pre class="downlit sourceCode r">
 <code class="sourceCode R"><span class="va">db</span> <span class="op">=</span> <span class="fu"><a href="https://rdrr.io/r/utils/available.packages.html" class="external-link">available.packages</a></span><span class="op">(</span>repos <span class="op">=</span> <span class="fu">BiocManager</span><span class="fu">::</span><span class="fu"><a href="https://rdrr.io/pkg/BiocManager/man/repositories.html" class="external-link">repositories</a></span><span class="op">(</span><span class="op">)</span><span class="op">)</span></code></pre></div>
 <pre><code><span class="co">## 'getOption("repos")' replaces Bioconductor standard repositories, see</span>
 <span class="co">## '?repositories' for details</span>
 <span class="co">## </span>
 <span class="co">## replacement repositories:</span>
 <span class="co">##     CRAN: https://cloud.r-project.org</span></code></pre>
-<div class="sourceCode" id="cb16"><pre class="downlit sourceCode r">
+<div class="sourceCode" id="cb17"><pre class="downlit sourceCode r">
 <code class="sourceCode R"><span class="fu"><a href="https://rdrr.io/r/base/system.time.html" class="external-link">system.time</a></span><span class="op">(</span><span class="va">p1</span> <span class="op">&lt;-</span> <span class="fu">tools</span><span class="fu">::</span><span class="fu"><a href="https://rdrr.io/r/tools/package_dependencies.html" class="external-link">package_dependencies</a></span><span class="op">(</span><span class="st">"cola"</span>, db <span class="op">=</span> <span class="va">db</span>, recursive <span class="op">=</span> <span class="cn">TRUE</span><span class="op">)</span><span class="op">[[</span><span class="fl">1</span><span class="op">]</span><span class="op">]</span><span class="op">)</span></code></pre></div>
 <pre><code><span class="co">##    user  system elapsed </span>
-<span class="co">##   0.229   0.000   0.231</span></code></pre>
+<span class="co">##   0.222   0.001   0.224</span></code></pre>
 <p>In <strong>pkgndep</strong>, we implement a faster version of <code>package_dependencies()</code> function. First the database needs to be reformatted by <code><a href="../reference/reformat_db.html">reformat_db()</a></code> function. The returned variable <code>db2</code> is a reference class object and its method <code>db2$package_dependencies()</code> can be used to retrieve dependency packages.</p>
-<div class="sourceCode" id="cb18"><pre class="downlit sourceCode r">
+<div class="sourceCode" id="cb19"><pre class="downlit sourceCode r">
 <code class="sourceCode R"><span class="va">db2</span> <span class="op">=</span> <span class="fu"><a href="../reference/reformat_db.html">reformat_db</a></span><span class="op">(</span><span class="va">db</span><span class="op">)</span></code></pre></div>
 <pre><code><span class="co">## prepare dependency table...</span>
 <span class="co">## prepare reverse dependency table...</span></code></pre>
-<div class="sourceCode" id="cb20"><pre class="downlit sourceCode r">
+<div class="sourceCode" id="cb21"><pre class="downlit sourceCode r">
 <code class="sourceCode R"><span class="va">db2</span></code></pre></div>
 <pre><code><span class="co">## A package database of 22261 packages.</span>
 <span class="co">##   - 3417 Bioconductor / 18844 CRAN / 0 other packages.</span></code></pre>
-<div class="sourceCode" id="cb22"><pre class="downlit sourceCode r">
+<div class="sourceCode" id="cb23"><pre class="downlit sourceCode r">
 <code class="sourceCode R"><span class="fu"><a href="https://rdrr.io/r/base/system.time.html" class="external-link">system.time</a></span><span class="op">(</span><span class="va">p2</span> <span class="op">&lt;-</span> <span class="va">db2</span><span class="op">$</span><span class="fu">package_dependencies</span><span class="op">(</span><span class="st">"cola"</span>, recursive <span class="op">=</span> <span class="cn">TRUE</span>, simplify <span class="op">=</span> <span class="cn">TRUE</span><span class="op">)</span><span class="op">)</span></code></pre></div>
 <pre><code><span class="co">##    user  system elapsed </span>
 <span class="co">##   0.006   0.000   0.006</span></code></pre>
 <p><code>p1</code> and <code>p2</code> are actually identical:</p>
-<div class="sourceCode" id="cb24"><pre class="downlit sourceCode r">
+<div class="sourceCode" id="cb25"><pre class="downlit sourceCode r">
 <code class="sourceCode R"><span class="fu"><a href="https://rdrr.io/r/base/identical.html" class="external-link">identical</a></span><span class="op">(</span><span class="fu"><a href="https://rdrr.io/r/base/sort.html" class="external-link">sort</a></span><span class="op">(</span><span class="va">p1</span><span class="op">)</span>, <span class="fu"><a href="https://rdrr.io/r/base/sort.html" class="external-link">sort</a></span><span class="op">(</span><span class="va">p2</span><span class="op">)</span><span class="op">)</span></code></pre></div>
 <pre><code><span class="co">## [1] TRUE</span></code></pre>
 </div>
 <div class="section level2">
 <h2 id="session-info">Session info<a class="anchor" aria-label="anchor" href="#session-info"></a>
 </h2>
-<div class="sourceCode" id="cb26"><pre class="downlit sourceCode r">
+<div class="sourceCode" id="cb27"><pre class="downlit sourceCode r">
 <code class="sourceCode R"><span class="fu"><a href="https://rdrr.io/r/utils/sessionInfo.html" class="external-link">sessionInfo</a></span><span class="op">(</span><span class="op">)</span></code></pre></div>
 <pre><code><span class="co">## R version 4.1.2 (2021-11-01)</span>
 <span class="co">## Platform: x86_64-apple-darwin17.0 (64-bit)</span>
