@@ -75,7 +75,7 @@
 </dl></div>
     <div id="details">
     <h2>Details</h2>
-    <p>If the package is not avaiable, it prints messages to lead users to install the package.</p>
+    <p>If the package is not avaiable, it prints messages to guide users to install the package.</p>
     </div>
 
     <div id="ref-examples">
