@@ -87,37 +87,37 @@
     <div class="sourceCode"><pre class="sourceCode r"><code><span class="r-in"><span class="fu">loaded_packages</span><span class="op">(</span><span class="st">"ComplexHeatmap"</span><span class="op">)</span></span>
 <span class="r-out co"><span class="r-pr">#&gt;</span> Loading ComplexHeatmap to a new R session... 31 namespaces loaded.</span>
 <span class="r-out co"><span class="r-pr">#&gt;</span>              pkg       type loading_time</span>
-<span class="r-out co"><span class="r-pr">#&gt;</span> 1           grid   basePkgs        1.102</span>
-<span class="r-out co"><span class="r-pr">#&gt;</span> 2          stats   basePkgs        1.102</span>
-<span class="r-out co"><span class="r-pr">#&gt;</span> 3       graphics   basePkgs        1.102</span>
-<span class="r-out co"><span class="r-pr">#&gt;</span> 4      grDevices   basePkgs        1.102</span>
-<span class="r-out co"><span class="r-pr">#&gt;</span> 5          utils   basePkgs        1.102</span>
-<span class="r-out co"><span class="r-pr">#&gt;</span> 6       datasets   basePkgs        1.102</span>
-<span class="r-out co"><span class="r-pr">#&gt;</span> 7        methods   basePkgs        1.102</span>
-<span class="r-out co"><span class="r-pr">#&gt;</span> 8           base   basePkgs        1.102</span>
-<span class="r-out co"><span class="r-pr">#&gt;</span> 9       circlize loadedOnly        1.102</span>
-<span class="r-out co"><span class="r-pr">#&gt;</span> 10   matrixStats loadedOnly        1.102</span>
-<span class="r-out co"><span class="r-pr">#&gt;</span> 11     codetools loadedOnly        1.102</span>
-<span class="r-out co"><span class="r-pr">#&gt;</span> 12       IRanges loadedOnly        1.102</span>
-<span class="r-out co"><span class="r-pr">#&gt;</span> 13           png loadedOnly        1.102</span>
-<span class="r-out co"><span class="r-pr">#&gt;</span> 14        digest loadedOnly        1.102</span>
-<span class="r-out co"><span class="r-pr">#&gt;</span> 15       foreach loadedOnly        1.102</span>
-<span class="r-out co"><span class="r-pr">#&gt;</span> 16        crayon loadedOnly        1.102</span>
-<span class="r-out co"><span class="r-pr">#&gt;</span> 17        stats4 loadedOnly        1.102</span>
-<span class="r-out co"><span class="r-pr">#&gt;</span> 18 GlobalOptions loadedOnly        1.102</span>
-<span class="r-out co"><span class="r-pr">#&gt;</span> 19    doParallel loadedOnly        1.102</span>
-<span class="r-out co"><span class="r-pr">#&gt;</span> 20     S4Vectors loadedOnly        1.102</span>
-<span class="r-out co"><span class="r-pr">#&gt;</span> 21    GetoptLong loadedOnly        1.102</span>
-<span class="r-out co"><span class="r-pr">#&gt;</span> 22  RColorBrewer loadedOnly        1.102</span>
-<span class="r-out co"><span class="r-pr">#&gt;</span> 23         rjson loadedOnly        1.102</span>
-<span class="r-out co"><span class="r-pr">#&gt;</span> 24     iterators loadedOnly        1.102</span>
-<span class="r-out co"><span class="r-pr">#&gt;</span> 25      parallel loadedOnly        1.102</span>
-<span class="r-out co"><span class="r-pr">#&gt;</span> 26      compiler loadedOnly        1.102</span>
-<span class="r-out co"><span class="r-pr">#&gt;</span> 27          clue loadedOnly        1.102</span>
-<span class="r-out co"><span class="r-pr">#&gt;</span> 28    colorspace loadedOnly        1.102</span>
-<span class="r-out co"><span class="r-pr">#&gt;</span> 29  BiocGenerics loadedOnly        1.102</span>
-<span class="r-out co"><span class="r-pr">#&gt;</span> 30       cluster loadedOnly        1.102</span>
-<span class="r-out co"><span class="r-pr">#&gt;</span> 31         shape loadedOnly        1.102</span>
+<span class="r-out co"><span class="r-pr">#&gt;</span> 1           grid   basePkgs        1.121</span>
+<span class="r-out co"><span class="r-pr">#&gt;</span> 2          stats   basePkgs        1.121</span>
+<span class="r-out co"><span class="r-pr">#&gt;</span> 3       graphics   basePkgs        1.121</span>
+<span class="r-out co"><span class="r-pr">#&gt;</span> 4      grDevices   basePkgs        1.121</span>
+<span class="r-out co"><span class="r-pr">#&gt;</span> 5          utils   basePkgs        1.121</span>
+<span class="r-out co"><span class="r-pr">#&gt;</span> 6       datasets   basePkgs        1.121</span>
+<span class="r-out co"><span class="r-pr">#&gt;</span> 7        methods   basePkgs        1.121</span>
+<span class="r-out co"><span class="r-pr">#&gt;</span> 8           base   basePkgs        1.121</span>
+<span class="r-out co"><span class="r-pr">#&gt;</span> 9       circlize loadedOnly        1.121</span>
+<span class="r-out co"><span class="r-pr">#&gt;</span> 10   matrixStats loadedOnly        1.121</span>
+<span class="r-out co"><span class="r-pr">#&gt;</span> 11     codetools loadedOnly        1.121</span>
+<span class="r-out co"><span class="r-pr">#&gt;</span> 12       IRanges loadedOnly        1.121</span>
+<span class="r-out co"><span class="r-pr">#&gt;</span> 13           png loadedOnly        1.121</span>
+<span class="r-out co"><span class="r-pr">#&gt;</span> 14        digest loadedOnly        1.121</span>
+<span class="r-out co"><span class="r-pr">#&gt;</span> 15       foreach loadedOnly        1.121</span>
+<span class="r-out co"><span class="r-pr">#&gt;</span> 16        crayon loadedOnly        1.121</span>
+<span class="r-out co"><span class="r-pr">#&gt;</span> 17        stats4 loadedOnly        1.121</span>
+<span class="r-out co"><span class="r-pr">#&gt;</span> 18 GlobalOptions loadedOnly        1.121</span>
+<span class="r-out co"><span class="r-pr">#&gt;</span> 19    doParallel loadedOnly        1.121</span>
+<span class="r-out co"><span class="r-pr">#&gt;</span> 20     S4Vectors loadedOnly        1.121</span>
+<span class="r-out co"><span class="r-pr">#&gt;</span> 21    GetoptLong loadedOnly        1.121</span>
+<span class="r-out co"><span class="r-pr">#&gt;</span> 22  RColorBrewer loadedOnly        1.121</span>
+<span class="r-out co"><span class="r-pr">#&gt;</span> 23         rjson loadedOnly        1.121</span>
+<span class="r-out co"><span class="r-pr">#&gt;</span> 24     iterators loadedOnly        1.121</span>
+<span class="r-out co"><span class="r-pr">#&gt;</span> 25      parallel loadedOnly        1.121</span>
+<span class="r-out co"><span class="r-pr">#&gt;</span> 26      compiler loadedOnly        1.121</span>
+<span class="r-out co"><span class="r-pr">#&gt;</span> 27          clue loadedOnly        1.121</span>
+<span class="r-out co"><span class="r-pr">#&gt;</span> 28    colorspace loadedOnly        1.121</span>
+<span class="r-out co"><span class="r-pr">#&gt;</span> 29  BiocGenerics loadedOnly        1.121</span>
+<span class="r-out co"><span class="r-pr">#&gt;</span> 30       cluster loadedOnly        1.121</span>
+<span class="r-out co"><span class="r-pr">#&gt;</span> 31         shape loadedOnly        1.121</span>
 </code></pre></div>
     </div>
   </div>
